<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        android:layout_margin="@dimen/margin_xlg"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:layout_margin="@dimen/margin_lg"
            android:background="@drawable/avatar_larg"
            android:src="@drawable/profile_img"
            app:shapeAppearanceOverlay="@style/RoundedSquare" />
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:layout_marginVertical="@dimen/margin_lg"
           android:layout_weight="1">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/full_name"
               android:textSize="@dimen/text_large"
               android:fontFamily="@font/dm_sans_bold"
               tools:ignore="NestedWeights"
               android:textColor="@color/black"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/job"
               android:textSize="@dimen/text_normal"
               android:fontFamily="@font/dm_sans_medium"
               android:textColor="@color/text_black"/>
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" android:orientation="horizontal"
               tools:ignore="UseCompoundDrawables">
               <ImageView
                   android:layout_width="16dp"
                   android:layout_height="16dp"
                   android:src="@drawable/ic_baseline_place_24"
                   app:tint="@color/red"
                   android:layout_gravity="center"
                   android:contentDescription="@string/place_icon" />
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:fontFamily="@font/dm_sans_regular"
                   android:text="@string/location"
                   android:textColor="@color/text_gray"
                   android:textSize="@dimen/text_normal"
                   />
           </LinearLayout>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/reviews"
                   android:textSize="@dimen/text_normal"
                   android:fontFamily="@font/dm_sans_regular"
                   android:layout_marginEnd="@dimen/margin_md"
                   android:textColor="@color/black"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/rating"
                   android:textSize="@dimen/text_normal"
                   android:fontFamily="@font/dm_sans_medium"
                   android:layout_marginEnd="@dimen/margin_sm"
                   android:textColor="@color/black"/>
               <ImageView
                   android:layout_width="16dp"
                   android:layout_height="16dp"
                   android:src="@drawable/ic_baseline_star_24"
                   app:tint="@color/yellow"
                   android:layout_gravity="center"
                   android:contentDescription="@string/rating_icon" />

           </LinearLayout>


       </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_lg"
            android:layoutDirection="rtl">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/label_bg"
                android:fontFamily="@font/dm_sans_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/padding_lg"
                android:paddingVertical="@dimen/padding_md"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                tools:ignore="TextContrastCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Local"
                android:textSize="@dimen/text_normal"
                android:fontFamily="@font/dm_sans_medium"
                android:layout_marginTop="@dimen/margin_sm"
                android:textAlignment="viewEnd"
                android:textColor="@color/text_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:text="@string/duration"
                android:textColor="@color/text_gray_100"
                android:textSize="@dimen/text_normal"
                android:fontFamily="@font/dm_sans_regular"
                android:textAlignment="center"/>

        </LinearLayout>






    </LinearLayout>
</LinearLayout>